fix: array parse